# lumbra-opening-book

./: Cargo.toml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
rust/: lib.rs
scripts/: position_move.py  shakmaty_hasher.py
src/lumbra_opening_book/: __main__.py  database.py  fetch.py  shakmaty_python.pyi
